[gd_scene load_steps=2 format=3 uid="uid://dyxulstoqg4k"]

[ext_resource type="Script" path="res://scenes/ui/bases/parent_button.gd" id="1_cofon"]

[node name="ParentButton" type="Button"]
offset_right = 8.0
offset_bottom = 8.0
script = ExtResource("1_cofon")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SoundEffects"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
